--- a/pom.xml
+++ b/pom.xml
@@ -16,5 +16,10 @@
         <artifactId>bluecove</artifactId>
         <version>2.1.1</version>
     </dependency>
+    <dependency>
+        <groupId>javax.mail</groupId>
+        <artifactId>mail</artifactId>
+        <version>1.4.7</version>
+    </dependency>
     </dependencies>
 </project>
